--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         .header { margin-bottom: 20px; flex-shrink: 0; }
         .header img { width: 100px; height: 100px; }
-        .status-bar { font-size: 0.8em; color: #888; margin-bottom: 15px; }
+        .status-bar { font-size: 0.8em; color: #888; margin-bottom: 15px; min-height: 1em; /* To prevent layout shift */ }
         .container {
             width: 100%; background-color: var(--secondary-bg); padding: 20px;
             border-radius: 10px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
@@ -42,27 +42,27 @@
         #xray-header { background-color: var(--logo-red); }
         #singbox-header { background-color: var(--logo-green); }
         .test-button {
-            background-color: var(--logo-green); color: white; border: none; padding: 10px 20px;
-            border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1em; margin-bottom: 20px;
+            background-color: var(--logo-green); color: white; border: none; padding: 8px 18px;
+            border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 0.95em; margin-bottom: 20px;
         }
-        .action-group { border: 1px solid var(--border-color); border-radius: 8px; padding: 15px; margin-bottom: 15px; }
-        .action-group-title { margin: 0 0 15px 0; font-size: 1.1em; text-align: right; border-bottom: 1px solid var(--border-color); padding-bottom: 10px; }
+        .action-group { border: 1px solid var(--border-color); border-radius: 8px; padding: 12px; margin-bottom: 12px; }
+        .action-group-title { margin: 0 0 12px 0; font-size: 1.1em; text-align: right; border-bottom: 1px solid var(--border-color); padding-bottom: 8px; }
         .action-buttons { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
-        .action-button { background-color: #333; border: 1px solid var(--border-color); padding: 8px 15px; border-radius: 5px; cursor: pointer; font-size: 0.9em; flex-grow: 1; color: var(--text-color); }
+        .action-button { background-color: #333; border: 1px solid var(--border-color); padding: 6px 12px; border-radius: 5px; cursor: pointer; font-size: 0.85em; flex-grow: 1; color: var(--text-color); }
         .protocol-group { border-top: 1px solid var(--border-color); }
-        .protocol-header { background-color: transparent; padding: 15px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; }
+        .protocol-header { background-color: transparent; padding: 12px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; }
         .protocol-controls { display: flex; align-items: center; gap: 10px; }
-        .select-all-btn { background-color: #444; border: 1px solid #666; padding: 5px 10px; border-radius: 5px; cursor: pointer; font-size: 0.8em; color: var(--text-color); }
+        .select-all-btn { background-color: #444; border: 1px solid #666; padding: 4px 8px; border-radius: 5px; cursor: pointer; font-size: 0.8em; color: var(--text-color); }
         .config-list { list-style: none; padding: 0; margin: 0; max-height: 0; transition: max-height 0.3s ease-out; overflow: hidden; }
         .protocol-group.open .config-list { max-height: 2000px; }
-        .config-item { padding: 15px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
+        .config-item { padding: 12px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
         .config-item:last-child { border-bottom: none; }
-        .config-checkbox { flex-shrink: 0; transform: scale(1.4); margin-left: 8px; accent-color: var(--logo-green); }
+        .config-checkbox { flex-shrink: 0; transform: scale(1.3); margin-left: 8px; accent-color: var(--logo-green); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
-        .config-details .server { font-weight: bold; word-break: break-all; font-size: 0.9em; }
-        .ping { font-weight: bold; }
-        .copy-button-container { display: flex; gap: 10px; }
-        .copy-btn { background-color: #333; border: 1px solid var(--border-color); padding: 8px 12px; border-radius: 5px; cursor: pointer; color: var(--text-color); }
+        .config-details .server { font-weight: bold; word-break: break-all; font-size: 0.85em; }
+        .ping { font-weight: bold; font-size: 0.9em; }
+        .copy-button-container { display: flex; gap: 8px; }
+        .copy-btn { background-color: #333; border: 1px solid var(--border-color); padding: 6px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.9em; }
         .bottom-links { margin-top: auto; padding-top: 20px; border-top: 2px solid var(--border-color); width: 100%; display: flex; gap: 20px; justify-content: center; flex-shrink: 0; }
         .bottom-links a { color: var(--text-color); text-decoration: none; font-size: 0.9em; }
         .alert { padding: 20px; font-weight: bold; color: var(--logo-red); }
@@ -131,7 +131,7 @@
                     if (!dataResponse.ok) throw new Error('Main config file not found.');
                     
                     // Success!
-                    document.getElementById('status-bar').textContent = `✅ بارگذاری موفق از: ${new URL(baseUrl).hostname}`;
+                    document.getElementById('status-bar').textContent = `تاریخ آخرین بروزرسانی: ${version}`;
                     return await dataResponse.json();
                 } catch (error) { 
                     console.error(`Failed to fetch from source ${baseUrl}:`, error);
