--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             const API_BASE_URL = 'https://v2v-vercel.vercel.app';
             // ⬇️ **مسیرهای API تست پینگ**
-            // ** آدرس ورکر کلادفلر خود را بعدا در اینجا جایگزین کنید **
-            const CF_PING_ENDPOINT = 'https://temp-placeholder.workers.dev/ping'; 
+            const CF_PING_ENDPOINT = 'https://rapid-scene-1da6.mbrgh87.workers.dev'; 
             const VERCEL_PING_ENDPOINT = `${API_BASE_URL}/api/ping`; 
             
             const DATA_URL = 'all_live_configs.json';
